Fixed horizontal scrolling

--- a/home.css
+++ b/home.css
@@ -122,7 +122,6 @@ ul>a {
 	min-height: 100vh;
 	display: grid;
 	place-items: center;
-	width: 100vw;
 }
 
 .animate{
